# wappstomqtt

./: .gitignore  CMakeLists.txt  README.md  config.example.json
captures/: trace_bridge.trace  trace_brigde_2.trace  trace_brigde_3.pcap  trace_original.pcap
src/: Bridge.cpp  Bridge.hpp  Config.cpp  Config.hpp  Logger.hpp  TbGatewayServer.cpp  TbGatewayServer.hpp  ThingsBoardApi.cpp  ThingsBoardApi.hpp  ThingsBoardClient.cpp  ThingsBoardClient.hpp  WappstoClient.cpp  WappstoClient.hpp  main.cpp
